unpackaged/main/default/objects/Product_Translation__c/Product_Translation__c.object-meta.xml
<CustomObject>
    <label>Product Translation</label>
    <nameField>
        <displayFormat>PT-{0000}</displayFormat>
        <label>Translated Product</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Products Translations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>