unpackaged/main/default/objects/Product_Translation__c/fields/Long_Description__c.field-meta.xml
<CustomField>
    <fullName>Long_Description__c</fullName>
    <label>Long Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>