unpackaged/main/default/objects/Product_Translation__c/fields/Product_Catalog__c.field-meta.xml
<CustomField>
    <fullName>Product_Catalog__c</fullName>
    <label>Product (Catalog)</label>
    <referenceTo>Catalog_Product__c</referenceTo>
    <relationshipLabel>Products Translations</relationshipLabel>
    <relationshipName>Products_Translations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>