unpackaged/main/default/objects/Product_Translation__c/fields/Product_Color__c.field-meta.xml
<CustomField>
    <fullName>Product_Color__c</fullName>
    <label>Product Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>